[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="sarpy_apps"
version="1.2.0"
description="This provides a set of GUI tools based on tkinter for visualizing and interacting with SAR imagery and related data."
dependencies = [
    "numpy", 
    "matplotlib", 
    "Pillow", 
    "plotly", 
    "sarpy>=1.3.46", "tk_builder>=1.1.12"
]

[tool.setuptools.packages]
find = {} 